# ManiGaussian

./: .gitignore  LICENSE  README.md  eval.py  pyproject.toml  requirements.txt  run_seed_fn.py  train.py
ManiGaussian_results/w_geo/: 0.csv  1.csv  2.csv
agents/gnfactor_bc/: __init__.py  attention.py  launch_utils.py  models_embed.py  neural_rendering.py  perceiver_lang_io.py  qattention_gnfactor_bc_agent.py  qattention_stack_agent.py  resnetfc.py  utils.py
agents/manigaussian_bc/: __init__.py  attention.py  dino_extractor.py  graphics_utils.py  launch_utils.py  loss.py  models_embed.py  neural_rendering.py  perceiver_lang_io.py  qattention_manigaussian_bc_agent.py  qattention_stack_agent.py  resnetfc.py  utils.py
agents/manigaussian_bc/gaussian_renderer/: __init__.py
agents/peract_bc/: launch_utils.py  perceiver_lang_io.py  qattention_peract_bc_agent.py  qattention_stack_agent.py
conf/: config.yaml  eval.yaml
conf/method/: GNFACTOR_BC.yaml  ManiGaussian_BC.yaml  PERACT_BC.yaml
docs/: ERROR_CATCH.md  INSTALL.md
helpers/: custom_rlbench_env.py  demo_loading_utils.py  language_model.py  network_utils.py  preprocess_agent.py  utils.py
helpers/clip/core/: clip.py
helpers/optim/: lamb.py
scripts/: compute_results.py  eval.sh  gen_demonstrations.sh  gen_demonstrations_all.sh  train_and_eval_w_geo.sh  train_and_eval_w_geo_dyna.sh  train_and_eval_w_geo_sem.sh  train_and_eval_w_geo_sem_dyna.sh
voxel/: augmentation.py  voxel_grid.py
